# nrf-app

boards/arm/thingy9151lite_nrf5340/: CMakeLists.txt  (+15 more)
thingy9151lite_nrf5340_cpuapp_app/: CMakeLists.txt  Kconfig  prj.conf
thingy9151lite_nrf5340_cpuapp_app/boards/: nrf5340dk_nrf5340_cpuapp_ns.overlay
thingy9151lite_nrf5340_cpuapp_app/src/: bt_central_ht.c  main.c  usb_uart.c  usb_uart.h
thingy9151lite_nrf5340_cpuapp_app/src/addons/: CMakeLists.txt  gpio_shell.c  vcom.h
thingy9151lite_nrf5340_cpuapp_app/src/addons/vcom/: vcom_echo.c  vcom_shell.c
thingy9151lite_nrf5340_cpunet_app/: CMakeLists.txt  prj.conf  sample.yaml
thingy9151lite_nrf5340_cpunet_app/boards/: nrf5340dk_nrf5340_cpunet.overlay
thingy9151lite_nrf5340_cpunet_app/src/: main.c
thingy9151lite_nrf9151_app/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
thingy9151lite_nrf9151_app/boards/: nrf9151dk_nrf9151_ns.overlay  nrf9160dk_nrf9160_ns.overlay  nrf9161dk_nrf9161_ns.overlay
thingy9151lite_nrf9151_app/src/: config.h  lis2dw12.c  lis2dw12_shell.c  lis2dw12_shell.h  lps22hb.c  lps22hb_shell.c  lps22hb_shell.h  lps22hh_shell.c  lps22hh_shell.h  main.c
thingy9151lite_nrf9151_app/src/addons/: CMakeLists.txt  Kconfig  gpio_shell.c  lis2dw12.c  lis2dw12_shell.c  lis2dw12_shell.h  lis2dw12_trig.c  lis2dw12_trig.h  lps22hb.c  lps22hb_shell.c  lps22hb_shell.h  lps22hb_trig.c  lps22hb_trig.h  lps22hh.c  lps22hh_shell.c  lps22hh_shell.h  lps22hh_trig.c  lps22hh_trig.h  sensors_shell.c
thingy9151lite_nrf9151_app/src/addons/pmic/: CMakeLists.txt  Kconfig  Kconfig.pmic_charger  Kconfig.pmic_regulator  pmic_charger.c  pmic_charger.h  pmic_init.c  pmic_irq.c  pmic_irq.h  pmic_regulator.c  pmic_regulator.h
thingy9151lite_nrf9151_app/src/cloud/: Kconfig.lwm2m_integration
thingy9151lite_nrf9151_app/src/location/: CMakeLists.txt  location_shell.c  location_shell.h
thingy9151lite_nrf9151_app/src/modules/: ui_module.c  util_module.c
thingy9151lite_nrf9151_app/src/watchdog/: CMakeLists.txt  Kconfig  watchdog_app.c  watchdog_app.h  wdt_control.c  wdt_control.h
(+15 files in other folders)
